src/objects/Welcome_Call_Header__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Welcome Call History</relationshipLabel>
        <relationshipName>WelcomeCallHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Disposition_L2__c</fullName>
        <label>Call Disposition L2</label>
        <picklist>
            <picklistValues>
                <fullName>Greetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-allocation not done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome call accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome call rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number/No number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing/Switched Off/Not reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WelcomeCallHeaders</relationshipLabel>
        <relationshipName>WelcomeCallHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Welcome Call Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Booking__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Welcome Call Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WelcomeCallHeaders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>